# advent-of-code-24

./: README.md  day_1.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.ipynb  day_16.py  day_17.py  day_18.py  day_19.py  day_2.py  day_20.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  dev.ipynb  dev_15.ipynb  pyproject.toml
src/: __init__.py  day.py
